<resources>
    <string name="app_name">Straight from 10</string>
    <string name="please_wait">Please wait</string>
    <string name="please_click_again_to_exit">Please click back again to exit.</string>
    <string name="app_description">Play straight from 10 with your friends or complete strangers by joining private/public game sessions!</string>
    <string name="sign_up">SIGN UP</string>
    <string name="name">Username</string>
    <string name="description">Description</string>
    <string name="email">Email</string>
    <string name="password">Password</string>

    <string name="sign_up_description_text">Enter your credentials to register with us</string>
    <string name="sign_in_description_text">Enter your credentials to sign in</string>
    <string name="default_image"><![CDATA[https://firebasestorage.googleapis.com/v0/b/straightfrom10.appspot.com/o/profiles%2Fgeneric.png?alt=media&token=4c980577–26ee-49a7-857a-d83dfc092a3b]]></string>
    <string name="sign_in">SIGN IN</string>
    <string name="reset_password">Reset password</string>
    <string name="nav_my_profile">My Profile</string>
    <string name="nav_sign_out">Sign out</string>
    <string name="nav_report_bug">Report issue</string>
    <string name="image_contentDescription">image</string>
    <string name="update">UPDATE</string>
    <string name="report">SEND REPORT</string>
    <string name="my_profile_title">My Profile</string>
    <string name="report_issue_title">Report issue</string>

    <string name="join_game">JOIN GAME</string>
    <string name="start_game">START GAME</string>
    <string name="leave_game">LEAVE GAME</string>
    <string name="create_game">CREATE GAME</string>
    <string name="game_code">GAME CODE</string>
    <string name="image_content_description">Image</string>


    <string name="exit_room_player">Please click back again to exit room.</string>
    <string name="exit_room_creator">Please click back again to exit room. This will destroy the room.</string>


</resources>