<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_score"
            android:icon="@drawable/ic_score_24"
            android:title="You should not see this" />

        <item
            android:id="@+id/nav_my_profile"
            android:icon="@drawable/ic_settings_24"
            android:title="@string/nav_my_profile" />

        <item
            android:id="@+id/nav_sign_out"
            android:icon="@drawable/ic_logout_24"
            android:title="@string/nav_sign_out" />
        <item
            android:id="@+id/nav_report_bug"
            android:icon="@drawable/ic_bug_24"
            android:title="@string/nav_report_bug" />

    </group>
</menu>